--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 walkdir = "2.3.1"
 notify = "4.0.17"
 wax = "0.5.0"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0"
