--- a/config.json
+++ b/config.json
@@ -5,16 +5,16 @@
       "src": "/Users/borisbelmar/Proyectos/Deerwatcher/test1",
       "dest": "/Users/borisbelmar/Proyectos/Deerwatcher/test2",
       "ignore": [
-        ".git",
-        ".DS_Store"
+        "**/.git/**/*",
+        "**/.DS_Store/**/*"
       ]
     },
     {
       "src": "/Users/borisbelmar/Proyectos/Deerwatcher/test3",
       "dest": "/Users/borisbelmar/Proyectos/Deerwatcher/test4",
       "ignore": [
-        ".git",
-        ".DS_Store",
+        "**/.git/**/*",
+        "**/.DS_Store",
         "**/target/**/*"
       ]
     }
